kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudops-app
  namespace: cloudops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloudops

  template:
    metadata:
      labels:
        app: cloudops

    spec:
      containers:
        - name: cloudops

          image: nginx:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 20
