kubernetes/base/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudops-service
  namespace: cloudops

spec:
  selector:
    app: cloudops

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
