kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudops-ingress
  namespace: cloudops

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: cloudops-service

                port:
                  number: 80
